<resources>
    <string name="app_name">干货集中营</string>
    <string name="nav_item_install">干货</string>
    <string name="nav_item_movie">电影</string>
    <string name="nav_item_douban">豆瓣</string>
    <string name="nav_item_settings">设置</string>
    <string name="nav_item_support">支持</string>
    <string name="nav_item_baiqiu">糗事百科</string>
    <string name="nav_item_about">关于</string>
    <string name="about_developers_label">主要开发人</string>
    <string name="about_libraries_label">使用的库</string>
    <string name="about_translator_label">Translator</string>
    <string name="translator"></string>
    <string name="about_source_label">源代码</string>
    <string name="about_version_label">版本</string>
    <string name="about_developers">dengzhouguang</string>
    <string name="transition_movie_img">transition_movie_img</string>
    <string name="movie_name">电影名：</string>
    <string name="star">评分：</string>
    <string name="direction">导演：</string>
    <string name="genres">类型：</string>
    <string name="year">上映日期：</string>
    <string name="cast">演员：</string>
    <string name="story">剧情简介：</string>
    <string name="tv_recycler_item_1">Swipe down to refresh</string>
    <string name="tv_recycler_item_2">Swipe left or right to dismiss it</string>
    <string name="tv_recycler_item_3">Drag up or down to move it</string>
    <string name="item_swipe_dismissed">Dismissed</string>
    <string name="share_view_press_it">You can press it</string>
    <string name="item_swipe_undo">Undo</string>
    <string name="no_more_data">No more data</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="transitional_image">transitional_image</string>
</resources>
