<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_gank"
            android:icon="@drawable/ic_nav_gank"
            android:title="@string/nav_item_gank"/>
        <item
            android:id="@+id/nav_item_movie"
            android:icon="@drawable/ic_nav_movie"
            android:title="@string/nav_item_movie"/>
        <item
            android:id="@+id/nav_item_douban"
            android:icon="@drawable/ic_nav_douban"
            android:title="@string/nav_item_douban"/>
        <item
            android:id="@+id/nav_item_baiqiu"
            android:icon="@drawable/ic_nav_baike"
            android:title="@string/nav_item_baiqiu"/>
    </group>
    <group
        android:id="@+id/option_items"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_item_video"
            android:icon="@drawable/ic_nav_video"
            android:title="@string/nav_item_video"/>
        <item
            android:id="@+id/nav_item_support"
            android:icon="@drawable/ic_nav_support"
            android:title="@string/nav_item_support"/>
        <item
            android:id="@+id/nav_item_about"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/nav_item_about"/>
    </group>
</menu>
